# cancer-grove

./: .gitignore  README.md  models.py  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
Milestones/: Digital Poster [FINAL].pptx  Digital Poster.pptx  Link to the Presentation.txt  Milestone 1.docx  Milestone 2.docx  Milestone 3.docx  The Capstone Project [FINAL].docx
configs/: Dockerfile
docs/source/: api.rst  conf.py  index.rst  usage.rst
notebooks/: cancer_classifier.ipynb
notebooks/output/: cancer_classifier.html
src/: __init__.py  capapp.py  datasets.py  losses.py  models.py  pipeline.py  stats.py  trainers.py  utils.py  visuals.py
src/rl/: environments.py  transforms.py
tests/: test.py  test_models.py  test_pipeline.py  test_rl.py
