[build-system]
requires = ["setuptools >=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Pyblight"
version = "0.1.0"
dependencies = [
	"dash>=2.14.2",
	"gunicorn>=21.2.0",
	"numpy>=1.24.1",
	"plotly>=5.18.0",
	"pydicom>=2.4.3",
	"pytest>=7.4.3",
	"Sphinx>=7.2.6",
	"torch>=2.1.1",
	"torchaudio>=2.1.1",
	"torchvision>=0.16.1",
]
authors = [
	{name = "Wilson B. Peguero Rosario", email = "wpeguerorosario@outlook.com"},
]
readme = "README.md"
license = {file = "LICENSE.md"}
